--- a/02_form/index.html
+++ b/02_form/index.html
@@ -52,7 +52,7 @@
                             <span class="required">必須</span>
                         </th>
                         <td class="contents__table__detail">
-                            <input type="text" name="model" value="">
+                            <input class="text__frame" type="text" name="model" value="">
                         </td>
                     </tr>
                     <tr class="contents__table__tr">
@@ -60,7 +60,7 @@
                             <span class="required">必須</span>
                         </th>
                         <td class="contents__table__detail">
-                            <input type="text" name="number" value="">
+                            <input class="text__frame" type="text" name="number" value="">
                         </td>
                     </tr>
                     <tr class="contents__table__tr">
@@ -112,6 +112,218 @@
                         </td>
                     </tr>
                 </table>
+                <table class="contents__table table_margin">
+                    <caption>ピアノが置いてある場所</caption>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index adress__index">住所
+                            <span class="required">必須</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <div class="postal">
+                                <input class="contents__table__detail__radio text__frame" type="text" name="postal-code" value="" autocomplete="postal-code">
+                                <a class="postal__search" href="#">郵便番号を調べる</a>
+                            </div>
+                            <p class="postal__attention">郵便番号はハイフン(-)なしで入力してください。</p>
+                            <div class="adress">
+                                <select class="adress__box" name="adress__prefecture">
+                                    <option value="選択">選択</option>
+                                    <option value="北海道">北海道</option>
+                                    <option value="青森県">青森県</option>
+                                    <option value="岩手県">岩手県</option>
+                                    <option value="宮城県">宮城県</option>
+                                    <option value="秋田県">秋田県</option>
+                                    <option value="山形県">山形県</option>
+                                    <option value="福島県">福島県</option>
+                                    <option value="茨城県">茨城県</option>
+                                    <option value="栃木県">栃木県</option>
+                                    <option value="群馬県">群馬県</option>
+                                    <option value="埼玉県">埼玉県</option>
+                                    <option value="千葉県">千葉県</option>
+                                    <option value="東京都">東京都</option>
+                                    <option value="神奈川県">神奈川県</option>
+                                    <option value="新潟県">新潟県</option>
+                                    <option value="富山県">富山県</option>
+                                    <option value="石川県">石川県</option>
+                                    <option value="福井県">福井県</option>
+                                    <option value="山梨県">山梨県</option>
+                                    <option value="長野県">長野県</option>
+                                    <option value="岐阜県">岐阜県</option>
+                                    <option value="静岡県">静岡県</option>
+                                    <option value="愛知県">愛知県</option>
+                                    <option value="三重県">三重県</option>
+                                    <option value="滋賀県">滋賀県</option>
+                                    <option value="京都府">京都府</option>
+                                    <option value="大阪府">大阪府</option>
+                                    <option value="兵庫県">兵庫県</option>
+                                    <option value="奈良県">奈良県</option>
+                                    <option value="和歌山県">和歌山県</option>
+                                    <option value="鳥取県">鳥取県</option>
+                                    <option value="島根県">島根県</option>
+                                    <option value="岡山県">岡山県</option>
+                                    <option value="広島県">広島県</option>
+                                    <option value="山口県">山口県</option>
+                                    <option value="徳島県">徳島県</option>
+                                    <option value="香川県">香川県</option>
+                                    <option value="愛媛県">愛媛県</option>
+                                    <option value="高知県">高知県</option>
+                                    <option value="福岡県">福岡県</option>
+                                    <option value="佐賀県">佐賀県</option>
+                                    <option value="長崎県">長崎県</option>
+                                    <option value="熊本県">熊本県</option>
+                                    <option value="大分県">大分県</option>
+                                    <option value="宮崎県">宮崎県</option>
+                                    <option value="鹿児島県">鹿児島県</option>
+                                    <option value="沖縄県">沖縄県</option>
+                                </select>
+                                <input class="text__frame adress__frame" type="text" name="adress__first" value="">
+                                <input class="text__frame adress__frame" type="text" name="adress__second" value="">
+                                <input class="text__frame adress__frame" type="text" name="adress__third" value="">
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index">建築タイプと階数
+                            <span class="required">必須</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <select class="building_type" name="building_type">
+                                <option value="選択">選択</option>
+                                <option value="一戸建て">一戸建て</option>
+                                <option value="マンション">マンション</option>
+                                <option value="アパート">アパート</option>
+                                <option value="ビル">ビル</option>
+                                <option value="公共の建物">公共の建物</option>
+                                <option value="その他">その他</option>
+                            </select>
+                            <select class="building_floor" name="building_floor">
+                                <option value="選択">選択</option>
+                                <option value="地下2階">地下2階</option>
+                                <option value="地下1階">地下1階</option>
+                                <option value="1階">1階</option>
+                                <option value="2階">2階</option>
+                                <option value="3階">3階</option>
+                                <option value="4階">4階</option>
+                                <option value="5階">5階</option>
+                                <option value="6階">6階</option>
+                                <option value="7階">7階</option>
+                                <option value="8階">8階</option>
+                                <option value="9階">9階</option>
+                                <option value="10階">10階</option>
+                                <option value="11階以上">11階以上</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index">エレベーター
+                            <span class="required">必須</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <label class="input_click">
+                                <input type="radio" name="elevator" value="あり">あり
+                            </label>
+                            <label class="input_click">
+                                <input type="radio" name="elevator" value="なし">なし
+                            </label>
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index contents__table__transportation">建物への運搬方法
+                            <span class="optional">任意</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <div class="transportation">
+                                <label class="input_click transportation__short_element">
+                                    <input type="radio" name="transportation" value="階段">階段
+                                </label>
+                                <label class="input_click transportation__long_element">
+                                    <input type="radio" name="transportation" value="エレベーター">エレベーター
+                                </label>
+                                <label class="input_click transportation__long_element">
+                                    <input type="radio" name="transportation" value="クレーン使用">クレーン使用
+                                </label>
+                                <label class="input_click transportation__short_element">
+                                    <input type="radio" name="transportation" value="その他">その他
+                                </label>
+                                <label class="input_click transportation__long_element">
+                                    <input type="radio" name="transportation" value="わからない">わからない
+                                </label>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <table class="contents__table table_margin">
+                    <caption>お客様の情報</caption>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index name_index">お名前
+                            <span class="required">必須</span>
+                        </th>
+                        <td class="contents__table__detail info__flex">
+                            <div class="info__flex__box info__family">
+                                <input class="info__name__text" type="text" name="family" value="">
+                            </div>
+                            <div class="info__flex__box info__name">
+                                <input class="info__name__text" type="text" name="name" value="">
+                            </div>
+                            <div class="info__flex__box info__kana_family">
+                                <input class="info__name__text" type="text" name="family" value="">
+                            </div>
+                            <div class="info__flex__box info__kana_name">
+                                <input class="info__name__text" type="text" name="name" value="">
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index tel_index">TEL
+                            <span class="required">必須</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <input class="tel_frame" type="text" name="tel" value="">
+                            <p class="tel_attention">03-0000-0000、0300000000&nbsp;ハイフン(-)有り無しどちらでも入力可能です。</p>
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index">E-mail
+                            <span class="required">必須</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <input class="mail__frame" type="text" name="email" value="">
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index contents__table__contact">希望連絡方法
+                            <span class="optional">任意</span>
+                        </th>
+                        <td class="contents__table__detail contents_position">
+                            <label class="input_contact">
+                                <input type="radio" name="contact" value="電話">電話
+                            </label>
+                            <label class="input_contact">
+                                <input type="radio" name="contact" value="E-mail">E-mail
+                            </label>
+                            <label class="input_contact">
+                                <input type="radio" name="contact" value="どちらでも可">どちらでも可
+                            </label>
+                            <div class="contact__attention">
+                                <p class="contact__attention__text">E-mailをご選択いただいた場合でも、電話連絡をさせていただくことがあります。<br>予めご了承ください。</p>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="contents__table__tr">
+                        <th class="contents__table__index contents__table__other">その他質問、備考
+                            <span class="optional">任意</span>
+                        </th>
+                        <td class="contents__table__detail">
+                            <textarea class="other__textarea" name="other" maxlength="300"></textarea>
+                            <p class="other__attention">300文字以内</p>
+                        </td>
+                    </tr>
+                </table>
+                <div class="btn">
+                    <p class="confirmation">内容をご確認後、
+                        <a href="#">『ご利用規約』</a>
+                        に同意の上</p>
+                    <input class="" type="submit" name="post_btn" value="一括査定依頼">
+                </div>
             </form>
         </div>
     </body>
