--- a/02_form/index.html
+++ b/02_form/index.html
@@ -322,7 +322,7 @@
                     <p class="confirmation">内容をご確認後、
                         <a href="#">『ご利用規約』</a>
                         に同意の上</p>
-                    <input class="" type="submit" name="post_btn" value="一括査定依頼">
+                    <input class="submit__btn" type="image" src="./common/img/submit.jpg" name="post_btn" value="一括査定依頼">
                 </div>
             </form>
         </div>
